--- a/Ressource/config.yml
+++ b/Ressource/config.yml
@@ -1,5 +1,6 @@
 ---
 chat-format: '{WORLD_NAME}:[{PREFIX}]<{DISPLAY_NAME}> {MESSAGE}'
+// chat-format: '{WORLD_NAME}:<Xp:1>[R:0|0][{PREFIX}]<{DISPLAY_NAME}> {MESSAGE}'
 enable-formatter: true
 disablechat: false
 default-player-prefix: Default
